更改登录和自适应collectionView高度

--- a/SHCode/SHCode/PathFive/Views/SHFiveCollectionViewCell.xib
+++ b/SHCode/SHCode/PathFive/Views/SHFiveCollectionViewCell.xib
@@ -12,27 +12,41 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SHFiveCollectionViewCellID" id="gTV-IL-0wX" customClass="SHFiveCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="94" height="116"/>
+            <rect key="frame" x="0.0" y="0.0" width="88" height="87"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="94" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="88" height="87"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc0-2l-aW8">
-                        <rect key="frame" x="12" y="8" width="70" height="31"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="0.57014948090119766" green="0.18795668175650115" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc0-2l-aW8">
+                        <rect key="frame" x="23" y="61" width="42" height="21"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nPR-to-AaK">
+                        <rect key="frame" x="19" y="5" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="PN9-o5-lR2"/>
+                            <constraint firstAttribute="height" constant="50" id="rj6-7D-qdA"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
             </view>
-            <size key="customSize" width="94" height="116"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="nPR-to-AaK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="AjL-Wy-GOw"/>
+                <constraint firstAttribute="bottom" secondItem="fc0-2l-aW8" secondAttribute="bottom" constant="5" id="Qgs-CF-5Ga"/>
+                <constraint firstItem="fc0-2l-aW8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="YPc-zX-l7H"/>
+                <constraint firstItem="nPR-to-AaK" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="tim-2n-Pfc"/>
+            </constraints>
+            <size key="customSize" width="88" height="87"/>
             <connections>
+                <outlet property="itemImageV" destination="nPR-to-AaK" id="p8t-fq-Qdp"/>
                 <outlet property="itemL" destination="fc0-2l-aW8" id="1lx-2S-3aV"/>
             </connections>
-            <point key="canvasLocation" x="-155" y="-14"/>
+            <point key="canvasLocation" x="-158" y="-28.5"/>
         </collectionViewCell>
     </objects>
 </document>
